@@ -8,6 +8,9 @@ Changes - Apache::Test change logfile
 
 =item 1.08_dev
 
+prefix Apache::TestTrace (non-colour mode) messages with the loglevel,
+similar to what Apache does. [Stas]
+
 Instrument A-T with an optional successful (shell-wise) abort of the
 test suite, by asking the user whether they want to continue w/o
 completing the test suite. Use it in places where we know that the
